# GraphScript

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  todo.txt
deserialize/: CMakeLists.txt  output.gs
deserialize/src/: main.cpp
editor/: CMakeLists.txt
editor/include/: GraphScriptEditor.cpp  GraphScriptEditor.h  Utils.h
editor/src/: App.cpp  GraphScriptEditor.cpp  OpenSans.h  Utils.cpp  main.cpp
example/: CMakeLists.txt
example/src/: App.cpp  App.h  OpenSans.h  main.cpp
graphscript/: CMakeLists.txt
graphscript-raylib/: CMakeLists.txt
graphscript-raylib/include/: GraphScript_Raylib.h
graphscript-raylib/src/: GraphScript_Raylib.cpp
graphscript-runtime-shared/: CMakeLists.txt
graphscript-runtime-shared/include/: GraphScriptRuntimeShared.h  RuntimeUtils.h
graphscript-runtime-shared/src/: GraphScriptRuntimeShared.cpp  RuntimeUtils.cpp
graphscript/include/: BuiltInNodes.h  GraphScript.h  TypeDef.h
graphscript/src/: GraphScript.cpp
runtime/: CMakeLists.txt  New.gs  New___Entry.gse
runtime/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/include/: App.h  GraphScriptEditor.h  GraphScriptSandbox.h
sandbox/sample/: New.gs  New___Entry.gse  imgui.ini  sample.gsp
sandbox/src/: App.cpp  App.h  GraphScriptEditor.cpp  GraphScriptSandbox.cpp  Utils.cpp  imgui_filedialog.cpp  main.cpp
